refactor relation tests
(create test objects programmatically instead of using CreateTestDB.sql)