@@ -1,5 +1,6 @@
 package com.dewarim.cinnamon.test.integration;
 
+import com.dewarim.cinnamon.DefaultPermission;
 import com.dewarim.cinnamon.ErrorCode;
 import com.dewarim.cinnamon.api.UrlMapping;
 import com.dewarim.cinnamon.client.CinnamonClientException;
@@ -11,7 +12,6 @@ import com.dewarim.cinnamon.model.request.relation.SearchRelationRequest;
 import com.dewarim.cinnamon.model.response.RelationWrapper;
 import com.dewarim.cinnamon.test.TestObjectHolder;
 import org.apache.http.HttpResponse;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
@@ -22,8 +22,6 @@ import static com.dewarim.cinnamon.DefaultPermission.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
-    private final String firstRelationTypeName = "all-protector";
-
 
     @Test
     public void unhappyRequestWithoutParameters() throws IOException {
@@ -49,22 +47,17 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
 
     @Test
     public void getRelationsByLeftIds() throws IOException {
-        var toh = new TestObjectHolder(adminClient, "reviewers.acl", userId, createFolderId)
-                .createAcl("with-add-child-permission")
-                .createGroup("with-add-child-permission")
-                .addUserToGroup(userId)
-                .createAclGroup()
-                .addPermissions(List.of(RELATION_CHILD_ADD, RELATION_PARENT_ADD));
-        var leftOsd = toh.createOsd("left").osd;
+        var toh      = prepareAclGroupWithPermissions("getRelationsByLeftIds");
+        var leftOsd  = toh.createOsd("left").osd;
         var rightOsd = toh.createOsd("right").osd;
 
         client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<none/>");
 
-        List<Relation> relations = client.searchRelations(List.of(leftOsd.getId()), null,null,false,false);
-        assertEquals(1,relations.size());
+        List<Relation> relations = client.searchRelations(List.of(leftOsd.getId()), null, null, false, false);
+        assertEquals(1, relations.size());
 
-        Relation        relation = relations.get(0);
-        Long            typeId   = relation.getTypeId();
+        Relation relation = relations.get(0);
+        Long     typeId   = relation.getTypeId();
         assertNotNull(typeId);
         assertEquals(1L, (long) typeId);
         Long leftId = relation.getLeftId();
@@ -73,48 +66,67 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
         Long rightId = relation.getRightId();
         assertNotNull(rightId);
         assertEquals(rightOsd.getId(), rightId);
-
     }
 
     @Test
     public void getRelationsByRightIds() throws IOException {
-        SearchRelationRequest request = new SearchRelationRequest();
-        request.setRightIds(Collections.singletonList(19L));
-        HttpResponse    response = sendStandardRequest(UrlMapping.RELATION__SEARCH, request);
-        RelationWrapper wrapper  = parseResponse(response);
-        Relation        relation = wrapper.getRelations().get(0);
-        Long            typeId   = relation.getTypeId();
+        var toh      = prepareAclGroupWithPermissions("getRelationsByRightIds");
+        var leftOsd  = toh.createOsd("left").osd;
+        var rightOsd = toh.createOsd("right").osd;
+
+        client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<none/>");
+
+        List<Relation> relations = client.searchRelations(null, List.of(rightOsd.getId()), null, false, false);
+        assertEquals(1, relations.size());
+
+        Relation relation = relations.get(0);
+        Long     typeId   = relation.getTypeId();
         assertNotNull(typeId);
         assertEquals(1L, (long) typeId);
         Long leftId = relation.getLeftId();
         assertNotNull(leftId);
-        assertEquals(20L, (long) leftId);
+        assertEquals(leftOsd.getId(), leftId);
         Long rightId = relation.getRightId();
         assertNotNull(rightId);
-        assertEquals(19L, (long) rightId);
+        assertEquals(rightOsd.getId(), rightId);
+    }
+
+    private TestObjectHolder prepareAclGroupWithPermissions(String name) throws IOException {
+        return prepareAclGroupWithPermissions(name, List.of(RELATION_CHILD_ADD, RELATION_PARENT_ADD));
+    }
+
+    private TestObjectHolder prepareAclGroupWithPermissions(String name, List<DefaultPermission> permissions) throws IOException {
+        return new TestObjectHolder(adminClient, "reviewers.acl", userId, createFolderId)
+                .createAcl(name)
+                .createGroup(name)
+                .addUserToGroup(userId)
+                .createAclGroup()
+                .addPermissions(permissions);
     }
 
     @Test
     public void getRelationsWithAllParameters() throws IOException {
-        SearchRelationRequest request = new SearchRelationRequest();
-        request.setLeftIds(Collections.singletonList(20L));
-        request.setRightIds(Collections.singletonList(19L));
-        request.setIncludeMetadata(true);
-        request.setRelationTypeIds(Collections.singletonList(1L));
-        HttpResponse    response = sendStandardRequest(UrlMapping.RELATION__SEARCH, request);
-        RelationWrapper wrapper  = parseResponse(response);
-        Relation        relation = wrapper.getRelations().get(0);
-        Long            typeId   = relation.getTypeId();
+        var toh      = prepareAclGroupWithPermissions("getRelationsWithAllParameters");
+        var leftOsd  = toh.createOsd("left").osd;
+        var rightOsd = toh.createOsd("right").osd;
+
+        client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<none/>");
+
+        List<Relation> relations = client.searchRelations(List.of(leftOsd.getId()), List.of(rightOsd.getId()), List.of(1L), true, false);
+        assertEquals(1, relations.size());
+
+        Relation relation = relations.get(0);
+        Long     typeId   = relation.getTypeId();
         assertNotNull(typeId);
         assertEquals(1L, (long) typeId);
         Long leftId = relation.getLeftId();
         assertNotNull(leftId);
-        assertEquals(20L, (long) leftId);
+        assertEquals(leftOsd.getId(), leftId);
         Long rightId = relation.getRightId();
         assertNotNull(rightId);
-        assertEquals(19L, (long) rightId);
+        assertEquals(rightOsd.getId(), rightId);
         String meta = relation.getMetadata();
-        assertEquals(meta, "<meta>important</meta>");
+        assertEquals(meta, "<none/>");
     }
 
     @Test
@@ -139,18 +151,16 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
     }
 
     @Test
-    public void deleteRelationWhichDoesNotExist() throws IOException {
+    public void deleteRelationWhichDoesNotExist() {
         var ex = assertThrows(CinnamonClientException.class, () -> client.deleteRelation(Long.MAX_VALUE));
         assertEquals(ErrorCode.OBJECT_NOT_FOUND, ex.getErrorCode());
     }
 
     @Test
     public void happyPathCreateAndDeleteRelation() throws IOException {
-        addUserToAclGroupWithPermissions("happyPathCreateAndDeleteRelation",
+        var toh = prepareAclGroupWithPermissions("happyPathCreateAndDeleteRelation",
                 List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD, RELATION_PARENT_ADD,
                         RELATION_CHILD_REMOVE, RELATION_PARENT_REMOVE));
-        var toh = new TestObjectHolder(client, "happyPathCreateAndDeleteRelation", userId, createFolderId);
-
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
         // create
@@ -185,8 +195,7 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
 
     @Test
     public void createRelationFailsWithoutChildAddPermission() throws IOException {
-        addUserToAclGroupWithPermissions("createRelationFailsWithoutChildAddPermission", List.of(READ_OBJECT_SYS_METADATA));
-        var toh      = new TestObjectHolder(client, "createRelationFailsWithoutChildAddPermission", userId, createFolderId);
+        var toh = prepareAclGroupWithPermissions("createRelationFailsWithoutChildAddPermission", List.of(READ_OBJECT_SYS_METADATA));
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
 
@@ -197,9 +206,8 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
 
     @Test
     public void deleteRelationFailsWithoutChildRemovePermission() throws IOException {
-        addUserToAclGroupWithPermissions("deleteRelationFailsWithoutChildRemovePermission",
+        var toh = prepareAclGroupWithPermissions("deleteRelationFailsWithoutChildRemovePermission",
                 List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD, RELATION_PARENT_ADD));
-        var toh      = new TestObjectHolder(client, "deleteRelationFailsWithoutChildRemovePermission", userId, createFolderId);
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
 
@@ -207,15 +215,15 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
         Relation relation = client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<meta>m</meta>");
 
         // delete:
-        var ex = assertThrows(CinnamonClientException.class, ()->client.deleteRelation(relation.getId()));
+        var ex = assertThrows(CinnamonClientException.class, () -> client.deleteRelation(relation.getId()));
         assertEquals(ErrorCode.NO_RELATION_CHILD_REMOVE_PERMISSION, ex.getErrorCode());
     }
 
     @Test
     public void deleteRelationFailsWithoutParentRemovePermission() throws IOException {
-        addUserToAclGroupWithPermissions("deleteRelationFailsWithoutParentRemovePermission", List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD, RELATION_PARENT_ADD,
-                RELATION_CHILD_REMOVE));
-        var toh      = new TestObjectHolder(client, "deleteRelationFailsWithoutParentRemovePermission", userId, createFolderId);
+        var toh = prepareAclGroupWithPermissions("deleteRelationFailsWithoutParentRemovePermission",
+                List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD, RELATION_PARENT_ADD,
+                        RELATION_CHILD_REMOVE));
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
 
@@ -223,14 +231,13 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
         Relation relation = client.createRelation(leftOsd.getId(), rightOsd.getId(), 1L, "<meta>m</meta>");
 
         // delete:
-        var ex = assertThrows(CinnamonClientException.class, ()->client.deleteRelation(relation.getId()));
+        var ex = assertThrows(CinnamonClientException.class, () -> client.deleteRelation(relation.getId()));
         assertEquals(ErrorCode.NO_RELATION_PARENT_REMOVE_PERMISSION, ex.getErrorCode());
     }
 
     @Test
     public void createRelationFailsWithoutParentAddPermission() throws IOException {
-        addUserToAclGroupWithPermissions("createRelationFailsWithoutParentAddPermission", List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD));
-        var toh      = new TestObjectHolder(client, "createRelationFailsWithoutParentAddPermission", userId, createFolderId);
+        var toh = prepareAclGroupWithPermissions("createRelationFailsWithoutParentAddPermission", List.of(READ_OBJECT_SYS_METADATA, RELATION_CHILD_ADD));
         var leftOsd  = toh.createOsd("left-osd").osd;
         var rightOsd = toh.createOsd("right-osd").osd;
 
@@ -250,28 +257,36 @@ public class RelationServletIntegrationTest extends CinnamonIntegrationTest {
         return wrapper;
     }
 
-    @Disabled("TODO: find out if we really need this feature")
     @Test
     public void getRelationsInOrMode() throws IOException {
-        var toh    = new TestObjectHolder(client, "reviewers.acl", userId, createFolderId);
+        var toh    =prepareAclGroupWithPermissions("getRelationsInOrMode");
         var left1  = toh.createOsd("left or 1").osd;
         var left2  = toh.createOsd("left or 2").osd;
         var right1 = toh.createOsd("right or 1").osd;
         var right2 = toh.createOsd("right or 2").osd;
 
-        var relationType = adminClient.createRelationType(new RelationType("or-mode-test", false, false, false, false, false, false));
-        var relation1    = client.createRelation(left1.getId(), right1.getId(), relationType.getId(), "<meta/>");
-        var relation2    = client.createRelation(left2.getId(), right2.getId(), relationType.getId(), "<meta/>");
+        var relationType1 = adminClient.createRelationType(new RelationType("or-mode-test-1", false, false, false, false, false, false));
+        var relationType2 = adminClient.createRelationType(new RelationType("or-mode-test-2", false, false, false, false, false, false));
+        var relation1    = client.createRelation(left1.getId(), right1.getId(), relationType1.getId(), "<meta/>");
+        var relation2    = client.createRelation(left2.getId(), right2.getId(), relationType2.getId(), "<meta/>");
 
-        var andRelations = client.getRelations(List.of(left1.getId(), right2.getId()));
-//        assertEquals(0, andRelations.size());
+        // should find relation1 based on leftId + relation2 based on rightId
+        List<Relation> searchResult = client.searchRelations(List.of(left1.getId()), List.of(right2.getId()), null, true, true);
+        assertEquals(2,searchResult.size());
+        assertTrue(searchResult.contains(relation1));
+        assertTrue(searchResult.contains(relation2));
+
+        // should find relation1 based on leftId + relation2 based on typeId
+        List<Relation> searchResult2 = client.searchRelations(List.of(left1.getId()), null, List.of(relationType2.getId()), true, true);
+        assertEquals(2,searchResult2.size());
+        assertTrue(searchResult2.contains(relation1));
+        assertTrue(searchResult2.contains(relation2));
     }
 
     @Test
     public void getRelations() throws IOException {
-        addUserToAclGroupWithPermissions("getRelationsTest",
+        var toh = prepareAclGroupWithPermissions("getRelations",
                 List.of(RELATION_CHILD_ADD, RELATION_PARENT_ADD, READ_OBJECT_SYS_METADATA));
-        var toh = new TestObjectHolder(client, "getRelationsTest", userId, createFolderId);
 
         var left1  = toh.createOsd("left and 1").osd;
         var left2  = toh.createOsd("left and 2").osd;
